--- a/packages/redux_persist_flutter/pubspec.yaml
+++ b/packages/redux_persist_flutter/pubspec.yaml
@@ -15,6 +15,6 @@ dependencies:
   redux_persist: "^0.8.0"
 
 # Used for development
-#dependency_overrides:
-#  redux_persist:
-#    path: ../redux_persist
+dependency_overrides:
+  redux_persist:
+    path: ../redux_persist
