--- a/packages/redux_persist/pubspec.yaml
+++ b/packages/redux_persist/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 
 dependencies:
   redux: ">=3.0.0 <5.0.0"
+  path_provider: "^1.2.0"
   synchronized: "^2.0.2+1"
+  shared_preferences: "^0.5.3"
   meta: "^1.1.0"
 
 dev_dependencies:
